fixed view height on mobile media query

--- a/assets/style.css
+++ b/assets/style.css
@@ -108,7 +108,7 @@ input.submit-button:hover {
 
   section {
     margin: 1rem 3rem;
-    height: 90vh;
+    height: 120vh;
   }
 
   body {
